--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://duanjls.github.io/GMJC/'
 languageCode = 'zh'
 publishDir= 'docs'
 title = 'CHAGEE'
